// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match the snapshot for a new user 1`] = `
<DocumentFragment>
  <div
    class="container"
  >
    <h3
      class="title"
    >
      New user
    </h3>
    <nav
      aria-label="breadcrumbs"
      class="breadcrumb"
    >
      <ul>
        <li>
          <a
            href="/"
          >
            Home
          </a>
        </li>
        <li>
          <a
            href="/users"
          >
            Users
          </a>
        </li>
        <li
          class="is-active"
        >
          <a
            aria-current="page"
            href="/users/undefined"
          >
            new
          </a>
        </li>
      </ul>
    </nav>
    <form
      action="#"
    >
      <div
        class="field"
      >
        <label
          class="label"
          for="name"
        >
          Name
        </label>
        <div
          class="control"
        >
          <input
            data-testid="name"
            name="name"
            type="text"
            value=""
          />
        </div>
        <p
          class="help is-danger"
          data-testid="userNameErrors"
        />
      </div>
      <div
        class="field"
      >
        <label
          class="label"
          for="password"
        >
          Password
        </label>
        <div
          class="control"
        >
          <input
            data-testid="password"
            name="password"
            type="password"
            value=""
          />
        </div>
      </div>
      <div
        class="field"
      >
        <label
          class="label"
          for="confirmPassword"
        >
          Confirm Password
        </label>
        <div
          class="control"
        >
          <input
            data-testid="confirmPassword"
            name="confirmPassword"
            type="password"
            value=""
          />
        </div>
      </div>
      <div
        class="field"
      >
        <label
          class="label"
          for="isAdmin"
        >
          Is Admin
        </label>
        <div
          class="select"
        >
          <select
            data-testid="isAdmin"
            name="isAdmin"
          >
            <option
              value="yes"
            >
              Yes
            </option>
            <option
              value="no"
            >
              No
            </option>
          </select>
        </div>
      </div>
      <div
        class="field is-grouped"
      >
        <p
          class="control"
        >
          <button
            class="button"
            data-testid="submit"
            type="submit"
          >
            CREATE
          </button>
        </p>
        <p
          class="control"
        >
          <button
            class="button"
            data-testid="cancel"
            type="button"
          >
            CANCEL
          </button>
        </p>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`should match the snapshot for an existing admin user 1`] = `
<DocumentFragment>
  <div
    class="container"
  >
    <h3
      class="title"
    >
      Edit admin user 'user'
    </h3>
    <nav
      aria-label="breadcrumbs"
      class="breadcrumb"
    >
      <ul>
        <li>
          <a
            href="/"
          >
            Home
          </a>
        </li>
        <li>
          <a
            href="/users"
          >
            Users
          </a>
        </li>
        <li
          class="is-active"
        >
          <a
            aria-current="page"
            href="/users/2"
          >
            user
          </a>
        </li>
      </ul>
    </nav>
    <form
      action="#"
    >
      <div
        class="field"
      >
        <label
          class="label"
          for="name"
        >
          Name
        </label>
        <div
          class="control"
        >
          <input
            data-testid="name"
            name="name"
            type="text"
            value="user"
          />
        </div>
        <p
          class="help is-danger"
          data-testid="userNameErrors"
        />
      </div>
      <div
        class="field"
      >
        <label
          class="label"
          for="password"
        >
          Password
        </label>
        <div
          class="control"
        >
          <input
            data-testid="password"
            name="password"
            type="password"
            value=""
          />
        </div>
      </div>
      <div
        class="field"
      >
        <label
          class="label"
          for="confirmPassword"
        >
          Confirm Password
        </label>
        <div
          class="control"
        >
          <input
            data-testid="confirmPassword"
            name="confirmPassword"
            type="password"
            value=""
          />
        </div>
      </div>
      <div
        class="field"
      >
        <label
          class="label"
          for="isAdmin"
        >
          Is Admin
        </label>
        <div
          class="select"
        >
          <select
            data-testid="isAdmin"
            name="isAdmin"
          >
            <option
              value="yes"
            >
              Yes
            </option>
            <option
              value="no"
            >
              No
            </option>
          </select>
        </div>
      </div>
      <div
        class="field is-grouped"
      >
        <p
          class="control"
        >
          <button
            class="button"
            data-testid="submit"
            type="submit"
          >
            SAVE
          </button>
        </p>
        <p
          class="control"
        >
          <button
            class="button"
            data-testid="cancel"
            type="button"
          >
            CANCEL
          </button>
        </p>
        <p
          class="control"
        >
          <button
            class="button is-danger"
            data-testid="delete"
            type="button"
          >
            DELETE
          </button>
        </p>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`should match the snapshot for an existing non admin user 1`] = `
<DocumentFragment>
  <div
    class="container"
  >
    <h3
      class="title"
    >
      Edit user 'user'
    </h3>
    <nav
      aria-label="breadcrumbs"
      class="breadcrumb"
    >
      <ul>
        <li>
          <a
            href="/"
          >
            Home
          </a>
        </li>
        <li>
          <a
            href="/users"
          >
            Users
          </a>
        </li>
        <li
          class="is-active"
        >
          <a
            aria-current="page"
            href="/users/2"
          >
            user
          </a>
        </li>
      </ul>
    </nav>
    <form
      action="#"
    >
      <div
        class="field"
      >
        <label
          class="label"
          for="name"
        >
          Name
        </label>
        <div
          class="control"
        >
          <input
            data-testid="name"
            name="name"
            type="text"
            value="user"
          />
        </div>
        <p
          class="help is-danger"
          data-testid="userNameErrors"
        />
      </div>
      <div
        class="field"
      >
        <label
          class="label"
          for="password"
        >
          Password
        </label>
        <div
          class="control"
        >
          <input
            data-testid="password"
            name="password"
            type="password"
            value=""
          />
        </div>
      </div>
      <div
        class="field"
      >
        <label
          class="label"
          for="confirmPassword"
        >
          Confirm Password
        </label>
        <div
          class="control"
        >
          <input
            data-testid="confirmPassword"
            name="confirmPassword"
            type="password"
            value=""
          />
        </div>
      </div>
      <div
        class="field"
      >
        <label
          class="label"
          for="isAdmin"
        >
          Is Admin
        </label>
        <div
          class="select"
        >
          <select
            data-testid="isAdmin"
            name="isAdmin"
          >
            <option
              value="yes"
            >
              Yes
            </option>
            <option
              value="no"
            >
              No
            </option>
          </select>
        </div>
      </div>
      <div
        class="field is-grouped"
      >
        <p
          class="control"
        >
          <button
            class="button"
            data-testid="submit"
            type="submit"
          >
            SAVE
          </button>
        </p>
        <p
          class="control"
        >
          <button
            class="button"
            data-testid="cancel"
            type="button"
          >
            CANCEL
          </button>
        </p>
        <p
          class="control"
        >
          <button
            class="button is-danger"
            data-testid="delete"
            type="button"
          >
            DELETE
          </button>
        </p>
      </div>
    </form>
  </div>
</DocumentFragment>
`;
